--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "compression": "^1.5.2",
     "express": "^4.13.3",
     "lodash": "^4.17.4",
+    "mkdirp": "^0.5.1",
     "morgan": "^1.8.0",
+    "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-accesstoken": "^0.1.0",
     "sequelize": "^3.30.4",
