--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "body-parser": "^1.17.1",
     "compression": "^1.5.2",
     "express": "^4.13.3",
+    "jsep": "^0.3.0",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "morgan": "^1.8.0",
