--- a/config/config.json
+++ b/config/config.json
@@ -11,10 +11,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "username": "dl",
+    "password": "dl",
+    "database": "dl",
+    "host": "database",
+    "dialect": "postgres"
   }
 }
