--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "dist",
   "scripts": {
     "dev": "nodemon -w src --exec \"babel-node src --presets es2015,stage-0\"",
-    "build": "babel src -s -D -d dist --presets es2015,stage-0",
+    "build": "babel src -D -d dist --presets es2015,stage-0",
     "start": "node dist",
-    "prestart": "npm run -s build",
     "test": "eslint src",
     "migrate": "sequelize db:migrate"
   },
@@ -41,6 +40,7 @@
     "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-accesstoken": "^0.1.0",
+    "pg": "^6.2.4",
     "sequelize": "^3.30.4",
     "sequelize-cli": "^2.7.0",
     "sqlite3": "^3.1.8",
